# trading-robot-lab

./: .env.example  .gitignore  AI_CONTEXT.md  M1.md  M10B_CROSSED_BOOK_ROOT_CAUSE.md  M10C_TXEND_AND_ORDER_LIFECYCLE_TRACE.md  M10D_STALE_ORDER_AND_MISSING_ID_TRACE.md  M10E_REGRESSION_COMPARE_ORDERBOOK_BEHAVIOR.md  M10F_FILL_AMOUNT_REST_SEMANTICS.md  M10G_MISSING_ORDER_ID_AND_SNAPSHOT_INIT.md  M10H_SNAPSHOT_SEMANTICS_AND_ORDERLOG_SPEC_CHECK.md  M10I_ORDLOG_FLAGS_REPLACT_AND_DECODER_AUDIT.md  M10J_COMPARE_QSH_RS_L3TOL2_AND_FILL_ORDER_MODEL.md  M10K_TXEND_TRANSACTION_GROUPING_AND_CANCEL_REMOVE_MODEL.md  M10L_AUTOMATE_REAL_SAMPLE_VALIDATION_AND_DEEP_ORDLOG_SEMANTICS.md  M10M_FIX_M10L_SCRIPT_AND_CONTINUE_ORDLOG_DEBUG.md  M10N_ORPHAN_CANCEL_AND_FIRST_CROSSED_ROOT_CAUSE.md  M10O_FIRST_CROSSED_ORDER_LIFECYCLE_AND_SESSION_STATE_AUDIT.md  M10P_SNAPSHOT_RECORD_HANDLING_AND_INITIAL_BOOK_AUDIT.md  M10Q_FIND_ACTUAL_ADD_SOURCE_OF_CROSSING_BID_ORDER.md  M10R_CROSSED_STATE_PERSISTENCE_AND_MARKET_PHASE_ANALYSIS.md  M10S_COUNTER_FLAG_SEMANTICS_AND_BOOK_IMPACT.md  M10T_REMAINING_CROSSED_AFTER_COUNTER_IGNORE.md  M10U_STRATEGY_READY_L2_EXPORT_AND_DATA_QUALITY_GATING.md  M10V_NON_SYSTEM_FLAG_SEMANTICS_AND_CROSSED_IMPACT.md  M10W_PERSISTENT_CROSSED_STATE_LIFECYCLE_AND_TX_SEMANTICS.md  M10X_QUOTE_FLAG_SEMANTICS_AND_CROSSED_IMPACT.md  M10_L3_L2_RECONSTRUCTION_DIAGNOSTICS.md  M10_RUN_COMMANDS.md  M11_TRADING_LAB_DATA_QUALITY_UI.md  M2.md  M3.md  M4.md  M5.md  M6.md  M7.md  M8.md  M8_HFT.md  M9_CPP_QSH_ORDLOG_DATA_LAYER.md  MIMO_START.md  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md  task-labels.json
cpp/moex_fast/: CMakeLists.txt  README.md
cpp/moex_fast/bench/: bench_spectra_gate_a.cpp
cpp/moex_fast/include/moex_fast/: decoder_report.hpp  decoder_types.hpp  fast_compiler.hpp  fast_decoder.hpp  inspect_types.hpp  inspector.hpp  report.hpp  sha256.hpp  spectra_gate_a.hpp  spectra_sequence_arithmetic.hpp  spectra_udp_framing.hpp  wire_cursor.hpp  xml_parser.hpp
cpp/moex_fast/src/: decode_main.cpp  decoder_report.cpp  decoder_types.cpp  fast_compiler.cpp  fast_decoder.cpp  inspect_types.cpp  inspector.cpp  main.cpp  report.cpp  sha256.cpp  spectra_gate_a.cpp  spectra_udp_framing.cpp  wire_cursor.cpp  xml_parser.cpp
cpp/moex_fast/tests/: cli_test_config.hpp.in  fast_reference_encoder.hpp  test_check.hpp  test_cli.cpp  test_config_parser.cpp  test_decoder_cli.cpp  test_decoder_compiler.cpp  test_decoder_limits.cpp  test_decoder_operators.cpp  test_decoder_primitives.cpp  test_decoder_reference_oracle.cpp  test_decoder_rollback.cpp  test_decoder_sequences.cpp  test_decoder_session.cpp  test_deterministic_report.cpp  test_helpers.hpp  test_provenance.cpp  test_resource_safety.cpp  test_spectra_gate_a.cpp  test_spectra_sequence_arithmetic.cpp  test_spectra_udp_framing.cpp  test_template_parser.cpp
cpp/moex_fast/tests/fixtures/: bad_id_templates.xml  dup_templates.xml  hash_test_a.xml  hash_test_b2.xml  invalid_case.xml  large_fields.xml  large_templates.xml  no_feed.xml  no_id_templates.xml  no_src_ip.xml  strict_test_config.xml  synthetic_configuration.xml  synthetic_templates.xml  synthetic_templates_130.xml  tcp_no_feed.xml  truncated.xml
cpp/moex_raw/: CMakeLists.txt  README.md
cpp/moex_raw/include/moex_raw/: crc32c.hpp  endian.hpp  file_position.hpp  raw_ab_replay_cursor.hpp  raw_replay.hpp  raw_replay_cursor.hpp  raw_report.hpp  raw_segment.hpp  raw_types.hpp  sha256.hpp  strings.hpp
cpp/moex_raw/src/: crc32c.cpp  endian.cpp  main.cpp  raw_ab_replay_cursor.cpp  raw_replay.cpp  raw_replay_cursor.cpp  raw_report.cpp  raw_segment_reader.cpp  raw_segment_writer.cpp  raw_types.cpp  sha256.cpp  strings.cpp
cpp/moex_raw/tests/: test_check.hpp  test_cli.cpp  test_content_sha256_e2e.cpp  test_crc32c.cpp  test_endian.cpp  test_footer_validation.cpp  test_golden_record_layout.cpp  test_header_contract.cpp  test_json_report.cpp  test_record_contract.cpp  test_replay.cpp  test_resource_safety.cpp  test_rotation.cpp  test_round3.cpp  test_round5.cpp  test_round6.cpp  test_stream_set.cpp  test_strings.cpp  test_writer_lifecycle.cpp
cpp/moex_spectra_pipeline/: CMakeLists.txt
cpp/moex_spectra_pipeline/include/moex_spectra_pipeline/: normal_replay_pipeline.hpp  ordered_decode.hpp  sequence_reset_probe.hpp
cpp/moex_spectra_pipeline/src/: normal_replay_pipeline.cpp  ordered_decode.cpp  sequence_reset_probe.cpp
cpp/moex_spectra_pipeline/tests/: test_normal_replay_pipeline.cpp  test_ordered_decode.cpp  test_sequence_reset_probe.cpp
cpp/qsh_ingest/: CMakeLists.txt  README.md
cpp/qsh_ingest/include/orderbook/: l2_snapshot.hpp  l3_event.hpp  order_book.hpp
cpp/qsh_ingest/include/qsh/: auxinfo_reader.hpp  deals_reader.hpp  leb128.hpp  ordlog_reader.hpp  qsh_header.hpp  qsh_reader.hpp  qsh_types.hpp  quotes_reader.hpp  sha256.hpp
cpp/qsh_ingest/include/quality/: data_quality.hpp
cpp/qsh_ingest/src/: auxinfo_reader.cpp  data_quality.cpp  deals_reader.cpp  l2_snapshot.cpp  leb128.cpp  main.cpp  order_book.cpp  ordlog_reader.cpp  qsh_header.cpp  qsh_reader.cpp  quotes_reader.cpp
cpp/qsh_ingest/tests/: test_best_level_orders.cpp  test_decoder_audit.cpp  test_fill_semantics.cpp  test_l2_diagnostics.cpp  test_l2_strategy_gating.cpp  test_leb128.cpp  test_m10g_diagnostics.cpp  test_m10h_snapshot_semantics.cpp  test_non_system_modes.cpp  test_order_book.cpp  test_ordlog_flags.cpp  test_orphan_cancel_modes.cpp  test_orphan_fill_modes.cpp  test_persistent_crossed.cpp  test_qsh_header.cpp  test_quote_modes.cpp  test_snapshot_audit.cpp  test_snapshot_mode.cpp  test_tracing_side_effects.cpp  test_tx_grouped.cpp
decisions/: ADR-0001-hybrid-python-cpp-architecture.md  ADR-0002-two-system-lab-runtime-architecture.md  ADR-0003-cpp-qsh-ordlog-data-engine.md  ADR-0004-moex-vpts-certification-gate.md
docs/: 01_hybrid_architecture.md  ai_agent_communication_protocol.md  ai_team_workflow.md  ci1-routing-verification.md  current_mimo_workflow_and_state.md  mimo_developer_workflow.md  qsh_data_source_notes.md  rt3_moex_fast_authoritative_source_audit.md  rt4_gate_a_completion_amendment.md  rt4_gate_b_setup.md  (+7 more)
(+116 files in other folders)
